<resources>
    <string name="app_name">SafetyPin</string>
    <string name="app_name_safety">Safety</string>
    <string name="app_name_pin"> PIN</string>
    <string name="app_title">학교를 위한 보안 솔루션</string>

    <!-- 로그인/회원가입 선택 창 -->
    <string name="selector_login">로그인</string>
    <string name="selector_signup">회원가입</string>

    <!-- 로그인 화면 -->
    <string name="login_email">이메일</string>
    <string name="login_passwd">비밀번호</string>

    <!-- 회원가입 화면 -->
    <string name="signup_title">회원가입</string>
    <string name="signup_name">이름</string>
    <string name="child_name">자녀의 이름</string>
    <string name="child_gcode">자녀의 학번</string>
    <string name="signup_code">가입 코드</string>

    <!-- 메인 화면 -->
    <string name="main_menu_send_visit_request">방문 요청 보내기</string>
    <string name="main_menu_send_message">메세지 보내기</string>
    <string name="main_menu_settings">자녀 등록</string>
    <string name="main_menu_help">도움말</string>

    <!-- 메인 화면 -->
    <string name="request_info">자녀의 선생님과 채팅이 시작됩니다\n버튼을 눌러 선생님께 요청을 보내세요</string>
    <string name="request_btn">방문 요청</string>
    <string name="no_pin">생성된 PIN 코드가 없습니다.</string>
    <string name="no_pin">생성된 PIN 코드가 없습니다.</string>
</resources>
