<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradent_default">
    <!-- 백그라운드 이미지 입니다. -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wallpaper_background"
        android:scaleType="centerCrop"
        android:alpha="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_app" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="16dp"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_safety"
                android:textSize="32sp"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_pin"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        <Button
            android:id="@+id/auth_select_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_circle_white"
            android:padding="16dp"
            android:text="@string/selector_login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/auth_select_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_circle_blue"
            android:padding="16dp"
            android:text="@string/selector_signup"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>