<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradent_default">
    <!-- 백그라운드 이미지 입니다. -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wallpaper_background"
        android:scaleType="centerCrop"
        android:alpha="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/auth_login_icon"
            android:src="@drawable/ic_app" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="16dp"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_safety"
                android:textSize="32sp"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_pin"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/child_code"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:hint="6자리 자녀코드를 입력하세요"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorWhite"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/child_add_btn"
            android:text="자녀를 등록합니다"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:padding="16dp"
            android:background="@drawable/button_circle_white"/>
    </LinearLayout>
</RelativeLayout>